# spark

./: .env  .gitignore  .mise.toml  Dockerfile  README.md  docker-compose.yaml  log4j.properties  log4j2.properties  pyproject.toml  requirements.txt  spark-defaults.conf
.cursor/rules/: general.mdc
docker/: iceberg-rest  spark  spark-connect  spark-worker
docs/: elt_architecture.md  minio_integration.md  spark_session_guide.md
notebook/: energy.ipynb  iceberg.ipynb  postgres.ipynb
scripts/: README.md  ingest-legal-docs.sh  ingest-nyc-taxi.sh  init_minio.sh  run_tests.py  setup_jars.sh  start-spark.sh  submit-jobs.sh  submit.py  upload-minio.sh
src/: add_table.py  check_tables.py  create_table.py  create_tables.py  generate_legal_docs.py  insert.py  insert_legal.py  insert_nyc_taxi.py  insert_tables.py  log_inserter.py  models.py  monitor_shuffling.py  parallel_writes.py  parse_logs.py  process_legal.py  semantic_chunker.py  shuffling.py  submit.py  test_job.py  test_s3a.py  text_chunks.py  tps.py  utils.py
src/ddl/: batch_jobs.sql  jobs.sql  legal_documents.sql  nyc_taxi_data.sql  postgres_init.sql
src/ddl/iceberg/: job_logs.sql  legal_docs.sql  legal_docs_metadata.sql  legal_documents.sql  pvdata.sql  site.sql  system.sql
src/energy/: ingest_pvdata.py  ingest_site.py  ingest_system.py
src/examples/: file_processing_examples.py  performance_logging.py  shuffling.py
src/legal/: generate_legal_docs.py  ingest_docs.py  ingest_docs_metadata.py  process_legal.py  text_chunks.py
src/legal/templates/: contract.template  legal_memo.template  legal_opinion.template  policy_document.template
src/schemas/: __init__.py  batch_metrics.json  legal_doc_metadata.json  legal_doc_types.json  legal_doc_types_data.json  metrics.json  nyc_taxi_trip.json  schema.py  schema_converter.py  schema_loader.py  schema_validator.py
src/templates/: court_filing.template
src/utils/: __init__.py  ddl.py  ingest.py  log_parser.py  logger.py  metrics.py  session.py
tests/: iceberg_spark_connect.py  spark_connect.py  test_minio_connection.py  test_minio_validation.py  test_session_creation.py  test_spark_connect.py
tests/integ/local/: test_check_tables.py  test_cluster_config.py  test_logging.py  test_process_legal.py  test_process_pvdata.py  test_spark_connect.py  test_spark_connect_functions.py  test_spark_connect_iceberg.py  test_spark_connect_minio.py  test_spark_connect_minio_auth.py
tests/integ/spark/: test_catalog.py  test_minio_connection.py  test_minio_validation.py  test_spark.py
tests/unit/: test_imports.py
transform/: README.md  config.yaml  dbt_transformations.md  run_sqlmesh.sh  run_with_env.sh  setup_jars.sh
transform/audit/: README.md  legal_documents_audit.sql  lineage_audit.sql  nyc_taxi_audit.sql  performance_audit.sql
transform/audits/: assert_document_content.sql  assert_error_data_integrity.sql  assert_positive_amounts.sql  assert_valid_dates.sql  assert_valid_document_id.sql  assert_valid_passenger_count.sql  legal_documents_audit.sql  lineage_audit.sql  nyc_taxi_audit.sql  performance_audit.sql
transform/external_models/: iceberg.yaml
transform/macros/: table_access.sql
transform/models/legal/: data_quality_metrics.sql  documents_chunked.py  documents_cleaned.sql  documents_error_cleaned.sql  legal_documents_cleaned.sql  legal_documents_error.sql
transform/models/legaldocs/: data_quality_metrics.sql  legal_documents_cleaned.sql  legal_documents_error.sql
transform/models/nyc_taxi/: nyc_taxi_aggregated.sql
transform/models/nyctaxi/: nyc_taxi_aggregated.sql
transform/tests/: test_legal_documents.sql  test_nyc_taxi_data.sql
