[project]
name = "spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyiceberg[duckdb,pyarrow]>=0.9.0",
    "pyspark[connect,sql]>=4.0.0",
    "soli-data-generator>=0.1.0",
    "sqlalchemy>=2.0.41",
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "spark_connect: marks tests that require Spark Connect",
    "pyspark: marks tests that use PySpark",
    "iceberg: marks tests that require Iceberg"
]
