[project]
name = "spark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyspark[connect,sql]>=3.5.0,<4.0.0",
    "pytest>=8.4.1",
    "minio>=7.2.15",
    "jsonschema>=4.24.0",
    "faker>=28.4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--color=yes"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "spark_connect: marks tests that require Spark Connect",
    "pyspark: marks tests that use PySpark",
    "iceberg: marks tests that require Iceberg"
]

[dependency-groups]
transform = [
    "psycopg2-binary>=2.9.10",
    "sqlmesh[postgres,web]>=0.164.0",
]
